<resources>
    <!-- Strings for the app properties -->
    <string name="app_name">WikiJourney</string>

    <!-- Strings for Home -->
    <string name="logo_description">Logo</string>
    <string name="around_a_place">Around a place</string>
    <string name="go_button">Go</string>
    <string name="home_or">OR</string>
    <string name="home_POI_around">Find Around Me!</string>
    <string name="home_options">Options (default)</string>
    <string name="home_maxPOI">Max POI (10)</string>
    <string name="home_range">Range (1km)</string>
    <string name="go_dest">Go to the\ndestination</string>

    <!-- Strings for error popup -->
    <string name="error_activate_GPS_title">Please activate GPS</string>
    <string name="error_activate_GPS">Some functions are deactivated without GPS. Please go to the Settings and activate GPS there if you want to fully use the app.</string>
    <string name="error_empty_destination_title">Destination missing</string>
    <string name="error_empty_destination">Please set a destination in the field.</string>
    <string name="error_activate_internet_title">Please activate Internet</string>
    <string name="error_activate_internet">The app cannot work without an Internet connection. Please activate mobile data or connect to a Wi-Fi network.</string>
    <string name="error_download_api_response_title">Error</string>
    <string name="error_download_api_response">An error has occurred when trying to reach the server. Please go back to home screen and retry.</string>
    <string name="error_not_implemented_title">Missing functionality!</string>
    <string name="error_not_implemented">This functionality is not implemented yet… We will add it shortly!</string>
    <string name="error_no_poi_around_title">No POI around</string>
    <string name="error_no_poi_around">There is no POI around this place. Increase the range or search somewhere else!</string>

    <!-- Strings for Map -->
    <string name="title_activity_map">Map</string>
    <string name="you_are_here">You are here</string>
    <string name="step_nbr">Step</string>

    <!-- Strings for Map Snackbars -->
    <string name="snackbar_downloading">Downloading…</string>
    <string name="snackbar_locating">Locating…</string>

    <!-- Strings for Options -->

    <!-- Strings for About -->
    <!-- String for the app_version is deleted, now generated by the Gradle plugin at runtime -->
    <string name="about_opensource">WikiJourney is an OpenSource project using data from Wikipedia, Wikidata, WikiVoyage and OpenStreetMaps.</string>
    <string name="about_licenses">Source Code License : Apache 2.0\nContent License : CC-by-SA</string>
    <string name="about_links">Website : http://wikijourney.eu/ \nGithub : https://github.com/WikiJourney/</string>

    <!-- Strings for the POI list -->
    <string name="read_more_button">Read more on Wikipedia</string>

    <!-- Strings for the screens_array Array, the Drawer and the Menu -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string-array name="screens_array">
        <item>@string/home</item>
        <item>@string/map</item>
        <item>@string/pois</item>
        <item>@string/action_settings</item>
        <item>@string/action_about</item>
    </string-array>

    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="pois">Points of interest</string>
    <string name="nav_sub_header">Group</string>

</resources>
