<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_version"
        android:id="@+id/version"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:maxHeight="10dp"
        android:src="@drawable/logo_cut"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_opensource"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_licenses"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_links"
        android:autoLink="web"
        android:id="@+id/textView5"
        android:padding="10dp"
        android:textSize="16dp" />

</LinearLayout>